# misc

./: .gitignore  CMakeLists.txt  LICENCE  compile_commands.json
src/: CMakeLists.txt  file.hpp  reader.hpp
tests/: CMakeLists.txt  cases.cpp
tests/output/: 2.txt  3.txt  4.txt
